CSS spacing fixes, don't know why certain CSS isn't pushing???

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@ p {
 footer {
   flex: 1;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 100px;
   background-color: black;
   border: 5px solid azure;
 }
@@ -35,7 +35,7 @@ footer {
 }
 
 #carnivores {
-  margin-top: 125px;
+  margin-top: 120px;
   position: relative;
   bottom: 30px;
 }
